# co-mathematician

./: .gitignore  AGENTS.md  CLAUDE.md  README.md  README.zh-CN.md  pyproject.toml
.agents/skills/co-mathematician/: SKILL.md
.agents/skills/co-mathematician/assets/: reviewer_output_schema.json
.agents/skills/codex-co-mathematician/: SKILL.md
.agents/skills/codex-co-mathematician/assets/: goals_template.yaml  project_template.md  reviewer_output_schema.json  workstream_template.md
.codex/: config.toml
.codex/agents/: adversarial_reviewer.toml  citation_checker.toml  computational_experimenter.toml  logic_reviewer.toml  proof_explorer.toml  synthesis_agent.toml
.cursor/rules/: co-mathematician.mdc  codex-co-mathematician.mdc
harness/: __init__.py
harness/co_math/: __init__.py  cli.py  gating.py  messages.py  reports.py  schemas.py  skills.py  workspace.py
harness/tests/: test_agent_adapters.py  test_gating.py  test_report_rendering.py  test_skill_registry.py  test_workspace.py
workspace/final/: working_paper.md
workspace/project/: GOALS.yaml  PROJECT.md  PROJECT_STATUS.md  messages.jsonl
workspace/workstreams/WS-G1-001-classify-minkowski-convexity-of-f-m-l/: WORKSTREAM.md  messages.jsonl  notes.md  plan.md  report.md  status.yaml
workspace/workstreams/WS-G1-001-classify-minkowski-convexity-of-f-m-l/artifacts/: bauschke_guler_lewis_sendov_2001_hyperbolic_polynomials_and_convex_analysis.txt  bivariate_counterexample_verification.py  bivariate_volume_polynomial_counterexamples.md  box_model_checks.py  branden_huh_2020_lorentzian_polynomials.txt  (+13 more)
(+4 files in other folders)
